--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -975,7 +975,9 @@ section {
 }
 
 .team-protraits {
-  padding: 40px 0;
+  position: relative;
+  left: -40px;
+  padding: 80px 0 40px;
 }
 .team-protraits:after {
   content: ' ';
@@ -986,23 +988,31 @@ section {
 .team-protraits-col {
   float: left;
   width: 25%;
+  padding: 0 30px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 0 15px;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg) translate(40px, 40px);
+  -ms-transform: rotate(-45deg) translate(40px, 40px);
+  transform: rotate(-45deg) translate(40px, 40px);
 }
 
 .team-portraits__item {
   position: relative;
-  margin: 50px auto 0;
-  width: 160px;
-  height: 160px;
-  border-radius: 40px;
+  margin: 0 auto 40px;
+  width: 73%;
+  border-radius: 25%;
   overflow: hidden;
   -webkit-box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
   box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
+  margin-left: 30%;
+}
+.team-portraits__item:last-child {
+  margin-right: 20%;
+}
+.team-portraits__item:before {
+  content: ' ';
+  display: block;
+  padding-top: 100%;
 }
 
 .team-portraits__item--hover {
@@ -1014,7 +1024,7 @@ section {
   width: 100%;
   top: 0;
   left: 0;
-  border-radius: 40px;
+  border-radius: 25%;
   background-color: #4B49FF;
   opacity: 0;
 }
@@ -1064,4 +1074,40 @@ section {
   top: -2px;
   background: transparent url(../images/portraits/dmitri.jpg) 50% 50% no-repeat;
   background-size: 100%;
+}
+.team-portraits__item--image.-ilya {
+  left: -11px;
+  top: 1px;
+  background: transparent url(../images/portraits/ilya.jpg) 50% 50% no-repeat;
+  background-size: 132%;
+}
+.team-portraits__item--image.-stanislav {
+  left: -5px;
+  top: -11px;
+  background: transparent url(../images/portraits/stanislav.jpg) 50% 50% no-repeat;
+  background-size: 100%;
+}
+.team-portraits__item--image.-ryan {
+  left: 5px;
+  top: -9px;
+  background: transparent url(../images/portraits/ryan.jpg) 50% 50% no-repeat;
+  background-size: 122%;
+}
+.team-portraits__item--image.-roman {
+  left: 0px;
+  top: -5px;
+  background: transparent url(../images/portraits/roman.jpg) 50% 50% no-repeat;
+  background-size: 120%;
+}
+.team-portraits__item--image.-rustam {
+  left: 0px;
+  top: -5px;
+  background: transparent url(../images/portraits/rustam.jpg) 50% 50% no-repeat;
+  background-size: 120%;
+}
+.team-portraits__item--image.-kori {
+  left: 0px;
+  top: -5px;
+  background: transparent url(../images/portraits/kori.jpg) 50% 50% no-repeat;
+  background-size: 120%;
 }
