--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -11,7 +11,9 @@
 }
 
 .team-protraits {
-    padding: 40px 0;
+    position: relative;
+    left: -40px;
+    padding: 80px 0 40px;
     &:after {
         content: ' ';
         display: table;
@@ -22,19 +24,30 @@
 .team-protraits-col {
     float: left;
     width: 25%;
+    padding: 0 30px;
     box-sizing: border-box;
-    padding: 0 15px;
-    transform: rotate(-45deg);
+    transform: rotate(-45deg) translate(40px,40px);
+    &:first-child {
+        // transform: rotate(-45deg) translate(40px,0px);
+    }
 }
 
 .team-portraits__item {
     position: relative;
-    margin: 50px auto 0;
-    width: 160px;
-    height: 160px;
-    border-radius: 40px;
+    margin: 0 auto 40px;
+    width: 73%;
+    border-radius: 25%;
     overflow: hidden;
     box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
+    margin-left: 30%;
+    &:last-child {
+        margin-right: 20%;
+    }
+    &:before{
+        content: ' ';
+        display: block;
+        padding-top: 100%;
+    }
 }
 
 .team-portraits__item--hover {
@@ -44,7 +57,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    border-radius: 40px;
+    border-radius: 25%;
     background-color: $color-roadmap;
     opacity: 0;
     &:hover {
@@ -85,6 +98,42 @@
         top: -2px;
         background: transparent url(../images/portraits/dmitri.jpg) 50% 50% no-repeat;
         background-size: 100%;
+    }
+    &.-ilya {
+        left: -11px;
+        top: 1px;
+        background: transparent url(../images/portraits/ilya.jpg) 50% 50% no-repeat;
+        background-size: 132%;
+    }
+    &.-stanislav {
+        left: -5px;
+        top: -11px;
+        background: transparent url(../images/portraits/stanislav.jpg) 50% 50% no-repeat;
+        background-size: 100%;
+    }
+    &.-ryan {
+        left: 5px;
+        top: -9px;
+        background: transparent url(../images/portraits/ryan.jpg) 50% 50% no-repeat;
+        background-size: 122%;
+    }
+    &.-roman {
+        left: 0px;
+        top: -5px;
+        background: transparent url(../images/portraits/roman.jpg) 50% 50% no-repeat;
+        background-size: 120%;
+    }
+    &.-rustam {
+        left: 0px;
+        top: -5px;
+        background: transparent url(../images/portraits/rustam.jpg) 50% 50% no-repeat;
+        background-size: 120%;
+    }
+    &.-kori {
+        left: 0px;
+        top: -5px;
+        background: transparent url(../images/portraits/kori.jpg) 50% 50% no-repeat;
+        background-size: 120%;
     }
 }
 
